# rfserve

./: .env_sample  Cargo.toml
.github/workflows/: build.yml
ddl/: ver1.0.0.sql
src/: di.rs  main.rs
src/config/: envs.rs
src/domain/: download_links.rs  mod.rs  yt_hisotry.rs
src/infra/: db.rs  mod.rs  server.rs
src/infra/dto/: mod.rs
src/service/: download_service.rs  mod.rs  register_service.rs
systemd/: rfserver.service
