[package]
name = "rfserve"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread","fs"] }
tokio-util = {version = "0.7.17",features = ["io"]}
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono","uuid"] }
chrono = "0.4.42"
derive_builder = "0.20.2"
uuid = { version = "1", features = ["v4"] }  
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
